# rust-client

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  cliff.toml
.github/: pull_request_template.md
.github/workflows/: build-and-test.yml  release.yml
docs/: DAG_VISUALIZATION_DESIGN.md  api-changelog-jan-mar-2026.md  architecture.md  deferred.md  testing.md
docs/commands/: advanced.md  deploy-and-wait.md  deploy.md  estimate-cost.md  exploratory-deploy.md  get-data.md  get-deploy.md  inspection.md  is-finalized.md  keys.md  propose.md  transfer.md
rho_examples/: deploy_id_test.rho  query_token_metadata.rho  test_revvault.rho  test_systemvault.rho
rho_examples/cli/: active_validators.rho  bond.rho  bonds_query.rho  epoch_length.rho  get_balance.rho  get_current_epoch_rewards.rho  quarantine_length.rho  transfer.rho
scripts/: README.md  release.sh  smoke_test.sh  stress_deploy.sh  version.sh
src/: args.rs  connection_manager.rs  dispatcher.rs  error.rs  events.rs  f1r3fly_api.rs  http_client.rs  lib.rs  main.rs  registry.rs  rev_vault.rs  rholang_helpers.rs  signing.rs  vault.rs
src/commands/: crypto.rs  dag.rs  events.rs  load_test.rs  mod.rs  network.rs  query.rs
src/dag/: app.rs  mod.rs  model.rs  renderer.rs
src/grpc/: blocks.rs  deploy.rs  http.rs  mod.rs  query.rs
src/utils/: crypto.rs  http.rs  mod.rs  output.rs  rho_helpers.rs
tests/: smoke.rs
