[package]
name = "node_cli"
version = "0.1.2"
edition = "2021"

[features]
default = ["cli"]
cli = ["dep:clap", "dep:ratatui", "dep:crossterm", "dep:tracing-subscriber"]

[[bin]]
name = "node_cli"
required-features = ["cli"]

[dependencies]
# F1r3fly protocol — using local path for development; switch back to git tag for release
f1r3fly-models = { package = "models", path = "../f1r3node-rust/models" }
f1r3fly-shared = { package = "shared", path = "../f1r3node-rust/shared" }
f1r3fly-crypto = { package = "crypto", path = "../f1r3node-rust/crypto" }
f1r3fly-rholang = { package = "rholang", path = "../f1r3node-rust/rholang" }
prost = "0.14"

# gRPC
tonic = "0.14"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Crypto
secp256k1 = { version = "0.31", features = ["rand"] }
blake2 = "0.10.6"
rand = "0.8.5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4.3"
bs58 = "0.5.0"

# Networking
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio-tungstenite = "0.26"
futures-util = "0.3"

# Hashing
sha3 = "0.10.8"
sha2 = "0.10.8"
typenum = "1.16.0"

# Library modules
chrono = "0.4"
log = "0.4"
tracing = "0.1"
thiserror = "2.0"
crc = "3"
zbase32 = "0.1"

# CLI-only (behind "cli" feature)
clap = { version = "4.4.6", features = ["derive"], optional = true }
ratatui = { version = "0.28", optional = true }
crossterm = { version = "0.28", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }
